# CUPS_printer_management_system

./: .env.example  .gitignore  Makefile  Readme.md  docker-compose.observability.yml  docker-compose.yaml  package-lock.json  test_pipeline.txt
.github/workflows/: deploy.yaml
api/: .dockerignore  Dockerfile  lifespan.py  main.py  pyproject.toml  settings.py  tracing.py
api/models/jobs/: cancel_job_request.py  create_job_request.py  create_job_response.py  job_event.py  job_event_query.py  job_list_request.py  job_list_response.py  job_response.py  retry_job_request.py
api/models/printers/: create_printer_request.py  diagnose_printer_response.py  printer.py  test_printer_response.py  update_printer_status.py
api/models/system/: health_response.py  queue_metrics_response.py  system_stats_response.py  worker_status.py
api/routes/: files.py  jobs.py  printers.py  system.py
api/utils/: database.py  lifespan_utils.py  queries.py  route_utils.py
cups_client/: Dockerfile
cups_server/: Dockerfile  cupsd.conf  setup.sh
database/: Dockerfile
database/config/: pg_hba.conf  postgresql.conf
database/init_scripts/: 01_init_db.sql  02_init_triggers.sql  03_seed_data.sql  04_init_rbac.sql  05_init_users.sh  init_db.sql  init_triggers.sql  seed_data.sql  seed_printer.sql
dummy_printer/: Dockerfile  start.sh
permissions/: init_permissions.sh
printer-platform-ui/: Dockerfile  default.conf  index.html  package-lock.json  package.json  vite.config.ts
processing_pipeline/: Dockerfile  main.py  pyproject.toml  tracing.py  utils.py
tests/: conftest.py
(+113 files in other folders)
